test/tests/operators/to_unix_socket/error_connect_max_retry_count.txt
error: failed to connect to UNIX domain socket: No such file or directory
 --> tests/operators/to_unix_socket/error_connect_max_retry_count.tql:9:16
  |
9 | to_unix_socket "/tmp/tenzir-uds-missing.sock", max_retry_count=1 {
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
  = note: path: /tmp/tenzir-uds-missing.sock
  = note: gave up after 1 retry
  = hint: ensure a server is listening on this socket path
